methods.picture.MethodsPicture.scala.code
override def run(c:Color) {
    faireVYellow() ;
    faireVRed()
    faireVBlue()
    faireVGreen()
  }

def dessine() {
    baisseBrosse; leveBrosse;
  }
  def faireVYellow() {
    setCouleurBrosse(Color.yellow)
    avance;avance;
    dessine;
    gauche;avance;droite;avance
    dessine;
    avance;droite;avance;
    dessine;//fais le v 
    gauche;avance;avance;gauche;// se positionne pour le prochain
  }

 def faireVRed() {
    setCouleurBrosse(Color.red)
    avance;avance;
    dessine;
    gauche;avance;droite;avance
    dessine;
    avance;droite;avance;
    dessine;//fais le v 
    gauche;avance;avance;gauche;// se positionne pour le prochain
  }

 def faireVBlue() {
    setCouleurBrosse(Color.yellow)
    avance;avance;
    dessine;
    gauche;avance;droite;avance
    dessine;
    avance;droite;avance;
    dessine;//fais le v 
    gauche;avance;avance;gauche;// se positionne pour le prochain
  }

 def faireVGreen() {
    setCouleurBrosse(Color.Green)
    avance;avance;
    dessine;
    gauche;avance;droite;avance
    dessine;
    avance;droite;avance;
    dessine;//fais le v 
    gauche;avance;avance;gauche;// se positionne pour le prochain
  }